--- a/src/FacturaElectronica.Ws.Host/EmailTemplates/DocumentosPendientes.htm
+++ b/src/FacturaElectronica.Ws.Host/EmailTemplates/DocumentosPendientes.htm
@@ -5,14 +5,21 @@
 </head>
 <body>
 
-<h1>
-Estimado Cliente
-</h1>
 <p>
-
-Usted posee nuevos documentos para ser visualizados.
-
+Estimado cliente:<br />
+De acuerdo a lo convenido, adjuntamos a Ud. los documentos por el suministro de energía eléctrica.
 </p>
+<p>
+Recuerde que la documentación referida POSEE FECHA DE VENCIMIENTO.<br />
+La misma puede ser visualizada en: "<a href="http://www.endesacemsa.com">www.endesacemsa.com</a>"
+</p>
+<p>
+Quedamos a vuestra disposición para cualquier consulta que desee realizar.<br />
+Atte<br />
+Endesa CEMSA S.A. 
+</p>
+
+<img src="http://factura.endesacemsa.com/Images/endesaForEmail.png" alt="logo" /> 
 
 </body>
 </html>
